# NEXUS

./: .env.example  .gitignore  PRD.md  README.md  pyproject.toml
.github/workflows/: release.yml
bridge/: .env.example  package-lock.json
bridge/src/: protocol.ts  server.ts  whatsapp.ts
memories/: README.md
nexus/: __init__.py  app.py  cli_app.py  config.py  onboard.py  runtime_helpers.py
nexus/bridge_runtime/: package.json
nexus/channels/: __init__.py  cli.py  ws_client.py
nexus/core/: __init__.py  bus.py  decision.py  loop.py  policy.py  protocol.py  text_format.py
nexus/db/: __init__.py  models.py
nexus/integrations/: __init__.py  calendar_client.py  contacts_client.py  docs_client.py  drive_client.py  excel_recalc.py  gmail_client.py  google_auth.py  openrouter_images.py  sheets_client.py
nexus/llm/: __init__.py  context.py  prompts.py  router.py
tests/: test_bridge_resolution.py  test_calendar_tool.py  test_cli_app.py  test_config_paths.py  test_contacts_tool.py  test_context_builder.py  test_decision_schema.py  test_docs_tool.py  test_doctor.py  test_drive_tool.py  test_email_tool.py  test_excel_tool.py  test_files_tool.py  test_google_auth.py  test_images_tool.py  test_llm_router.py  test_loop_decision_parsing.py  test_loop_dedup.py  test_loop_filters.py  test_loop_react.py  test_memory_retrieval_recent.py  test_onboard.py  test_pdf_tool.py  test_policy.py  test_redaction.py  test_runtime_helpers.py  test_scheduler_tool.py  test_sheets_tool.py  test_text_format.py  test_tui_envfile.py  test_tui_runtime.py  test_web_tool.py  test_ws_client.py
(+36 files in other folders)
